Use a simpler player with just JLayer rather than nimim which is overkill since it offers like overlay rendering for other applications etc