@@ -9,19 +9,6 @@
 	<version>1.0-SNAPSHOT</version>
 
 	<repositories>
-		<!-- for minim -->
-		<repository>
-			<id>clojars.org</id>
-			<url>http://clojars.org/repo</url>
-		</repository>
-
-		<!-- for launch4j -->
-		<repository>
-			<id>dsol-xml</id>
-			<name>Simulation @ TU Delft</name>
-			<url>http://simulation.tudelft.nl/maven/</url>
-		</repository>
-
 		<repository>
 			<id>git-thatsIch</id>
 			<name>thatsIch's Git based repo</name>
@@ -42,42 +29,33 @@
 	</dependencyManagement>
 
 	<dependencies>
-		<!-- unsupported official java wrapper for sound cloud -->
-		<dependency>
-			<groupId>com.soundcloud</groupId>
-			<artifactId>java-api-wrapper</artifactId>
-			<version>1.3.1</version>
-		</dependency>
 		<dependency>
 			<groupId>nok</groupId>
 			<artifactId>soundcloud-java-library</artifactId>
 			<version>0.2.1</version>
 		</dependency>
-		<!-- http://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+
+		<!--
+			used to download an URL easily
+
+			http://mvnrepository.com/artifact/commons-io/commons-io
+		-->
 		<dependency>
-			<groupId>com.googlecode.json-simple</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>1.1.1</version>
-		</dependency>
-		<!-- http://mvnrepository.com/artifact/com.google.code.gson/gson -->
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.6.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.3.6</version>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
 		</dependency>
 
 
+		<!-- music player and codec library -->
+		<!-- http://mvnrepository.com/artifact/com.googlecode.soundlibs/jlayer -->
 		<dependency>
-			<groupId>ddf.minim</groupId>
-			<artifactId>ddf.minim</artifactId>
-			<version>2.2.0</version>
+			<groupId>com.googlecode.soundlibs</groupId>
+			<artifactId>jlayer</artifactId>
+			<version>1.0.1-2</version>
 		</dependency>
 
+		<!-- handles authentication within a native bundled browser -->
 		<dependency>
 			<groupId>com.microsoft.alm</groupId>
 			<artifactId>oauth2-useragent</artifactId>
@@ -92,6 +70,22 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
+		</dependency>
+
+		<!--
+			izPack
+			pakcage once, deploy everywhere.
+
+			IzPack is a widely used tool for packaging applications on the Java™ platform.
+
+			Easily make installers that work seamlessly on Microsoft Windows™,
+			Linux™, Solaris™ and Mac OS X™. Keep your users happy just right
+			before they get their hands on your software for the first time.
+		-->
+		<dependency>
+			<groupId>org.codehaus.izpack</groupId>
+			<artifactId>izpack-maven-plugin</artifactId>
+			<version>5.0.8</version>
 		</dependency>
 
 		<!-- test dependencies -->
@@ -126,54 +120,6 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-
-			<!--
-			<plugin>
-				<groupId>com.akathist.maven.plugins.launch4j</groupId>
-				<artifactId>launch4j-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>l4j-clui</id>
-						<phase>package</phase>
-						<goals>
-							<goal>launch4j</goal>
-						</goals>
-						<configuration>
-							<skip>true</skip>
-							<headerType>console</headerType>
-							<outfile>target/encc.exe</outfile>
-							<jar>target/encc-1.0.jar</jar>
-							<errTitle>encc</errTitle>
-							<classPath>
-								<mainClass>com.akathist.encc.Clui</mainClass>
-								<addDependencies>false</addDependencies>
-								<preCp>anything</preCp>
-							</classPath>
-							<jre>
-								<minVersion>1.8.0</minVersion>
-								<opts>
-									<opt>-Djava.endorsed.dirs=./endorsed</opt>
-								</opts>
-							</jre>
-							<versionInfo>
-								<fileVersion>1.2.3.4</fileVersion>
-								<txtFileVersion>txt file version?
-								</txtFileVersion>
-								<fileDescription>a description</fileDescription>
-								<copyright>my copyright</copyright>
-								<productVersion>4.3.2.1</productVersion>
-								<txtProductVersion>txt product version
-								</txtProductVersion>
-								<productName>E-N-C-C</productName>
-								<internalName>ccne</internalName>
-								<originalFilename>original.exe
-								</originalFilename>
-							</versionInfo>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-						-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
@@ -182,10 +128,36 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<mainClass>de.thatsich.soundcloud.player.JavaFXTrayIcon</mainClass>
+							<mainClass>
+								de.thatsich.soundcloud.player.JavaFXTrayIcon
+							</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 		</plugins>
